--- a/Obfuscator.Renaming/Obfuscator.Renaming.csproj
+++ b/Obfuscator.Renaming/Obfuscator.Renaming.csproj
@@ -44,16 +44,26 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AssemblyResolver.cs" />
-    <Compile Include="FixVirtualMethodsNaminVisitor.cs" />
-    <Compile Include="ScopeHashGenerator.cs" />
-    <Compile Include="ScopeSth.cs" />
-    <Compile Include="TypeMap.cs" />
+    <Compile Include="Filters\ConfigurationFilter.cs" />
+    <Compile Include="Filters\IFilter.cs" />
+    <Compile Include="Renamer.cs" />
+    <Compile Include="Steps\BaseStep.cs" />
+    <Compile Include="Steps\BuildRenameMapStep.cs" />
+    <Compile Include="Steps\FillOverrideTables.cs" />
+    <Compile Include="Steps\FixReferencesStep.cs" />
+    <Compile Include="Steps\OutputStep.cs" />
+    <Compile Include="Steps\RenameStep.cs" />
+    <Compile Include="Steps\FixVirtualMethodsNamesStep.cs" />
+    <Compile Include="ScopeNameGenerator.cs" />
+    <Compile Include="Steps\IStep.cs" />
+    <Compile Include="Pipeline.cs" />
     <Compile Include="NameGenerator.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RenameVisitor.cs" />
-    <Compile Include="RenameVisitor.logging.cs" />
-    <Compile Include="Visitor.cs" />
+    <Compile Include="ObfuscationContext.cs" />
+    <Compile Include="Visitors\ReferenceRenamerVisitor.cs" />
+    <Compile Include="Visitors\RenameMapVisitor.cs" />
+    <Compile Include="Logging\RenameMapVisitor.logging.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ThirdParty\Cecil 1\Mono.Cecil.csproj">
@@ -77,6 +87,7 @@
       <Name>CommandLine</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
