--- a/Obfuscator.Test.NoInheritance/Obfuscator.Test.NoInheritance.csproj
+++ b/Obfuscator.Test.NoInheritance/Obfuscator.Test.NoInheritance.csproj
@@ -52,7 +52,9 @@
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>xcopy "$(TargetPath)" "$(SolutionDir)TestLibraries\bin" /Y
-xcopy "$(TargetDir)*.dll" "$(SolutionDir)TestLibraries\bin" /Y</PostBuildEvent>
+xcopy "$(TargetDir)*.dll" "$(SolutionDir)TestLibraries\bin" /Y
+xcopy "$(TargetDir)*.pdb" "$(SolutionDir)TestLibraries\bin" /Y
+</PostBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
