--- a/Obfuscator.Reflection/Obfuscator.Reflection/Obfuscator.Reflection.csproj
+++ b/Obfuscator.Reflection/Obfuscator.Reflection/Obfuscator.Reflection.csproj
@@ -46,13 +46,19 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DiscoveringReflection.cs" />
     <Compile Include="Map.cs" />
-    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ReflectionHelper.cs" />
+    <Compile Include="Steps\ReplaceMemberNameStringsStep.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\Obfuscator.Common\Obfuscator.Common.csproj">
+      <Project>{F2BF29A6-49B2-422A-9005-638E61F0AA97}</Project>
+      <Name>Obfuscator.Common</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\Obfuscator.MetadataBuilder\Obfuscator.MetadataBuilder\Obfuscator.MetadataBuilder.csproj">
+      <Project>{95DA839A-E705-4857-BA2B-0F4370C680E0}</Project>
+      <Name>Obfuscator.MetadataBuilder</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\Obfuscator.Utils\Obfuscator.Utils.csproj">
       <Project>{E10298D8-872D-47EB-BEFC-9FD00E78A296}</Project>
       <Name>Obfuscator.Utils</Name>
@@ -70,9 +76,7 @@
       <Name>CommandLine</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Steps\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
