--- a/Obfuscator.Utils/Obfuscator.Utils.csproj
+++ b/Obfuscator.Utils/Obfuscator.Utils.csproj
@@ -46,6 +46,7 @@
     <Compile Include="IAssemblyVisitor.cs" />
     <Compile Include="NullAssemblyVisitor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ReferenceResolver.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ThirdParty\Cecil 1\Mono.Cecil.csproj">
