--- a/Obfuscator.Renaming/TestLibraries/Obfuscator.Test.MultiLevelClassInheritance/Obfuscator.Test.MultiLevelClassInheritance.csproj
+++ b/Obfuscator.Renaming/TestLibraries/Obfuscator.Test.MultiLevelClassInheritance/Obfuscator.Test.MultiLevelClassInheritance.csproj
@@ -53,9 +53,9 @@
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>xcopy "$(TargetPath)" "$(SolutionDir)$(SolutionName)\TestLibraries\bin" /Y
-xcopy "$(TargetDir)*.dll" "$(SolutionDir)$(SolutionName)\TestLibraries\bin" /Y
-xcopy "$(TargetDir)*.pdb" "$(SolutionDir)$(SolutionName)\TestLibraries\bin" /Y</PostBuildEvent>
+    <PostBuildEvent>xcopy "$(TargetPath)" "$(SolutionDir)\TestLibraries\bin" /Y
+xcopy "$(TargetDir)*.dll" "$(SolutionDir)\TestLibraries\bin" /Y
+xcopy "$(TargetDir)*.pdb" "$(SolutionDir)\TestLibraries\bin" /Y</PostBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
