--- a/Obfuscator/Obfuscator.csproj
+++ b/Obfuscator/Obfuscator.csproj
@@ -46,7 +46,9 @@
     <Compile Include="Pipeline.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Steps\ConverterStep.cs" />
     <Compile Include="Steps\OutputStep.cs" />
+    <Compile Include="Steps\RenameMapVisitor.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Obfuscator.Common\Obfuscator.Common.csproj">
@@ -72,6 +74,10 @@
     <ProjectReference Include="..\ThirdParty\Cecil 1\rocks\Mono.Cecil.Rocks.csproj">
       <Project>{FBC6DD59-D09D-499C-B03C-99C1C78FF2AC}</Project>
       <Name>Mono.Cecil.Rocks</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\ThirdParty\Cecil 1\symbols\pdb\Mono.Cecil.Pdb.csproj">
+      <Project>{63E6915C-7EA4-4D76-AB28-0D7191EEA626}</Project>
+      <Name>Mono.Cecil.Pdb</Name>
     </ProjectReference>
     <ProjectReference Include="..\ThirdParty\CommandLine\src\libcmdline\CommandLine.csproj">
       <Project>{5DEA2811-2FFA-4959-830B-CAD3ACACABEB}</Project>
