renaming parameters types in reflecion methods calls

--- a/Obfuscator.Renaming/Obfuscator.Renaming/Obfuscator.Renaming.csproj
+++ b/Obfuscator.Renaming/Obfuscator.Renaming/Obfuscator.Renaming.csproj
@@ -18,7 +18,7 @@
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
     <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>TRACE;DEBUG;APPEND;BODY</DefineConstants>
+    <DefineConstants>TRACE;DEBUG;!APPEND;BODY</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
