--- a/Obfuscator.Renaming/TestLibraries/ConsoleApplication1/ConsoleApplication1.csproj
+++ b/Obfuscator.Renaming/TestLibraries/ConsoleApplication1/ConsoleApplication1.csproj
@@ -53,6 +53,11 @@
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <PropertyGroup>
+    <PostBuildEvent>xcopy "$(TargetPath)" "$(SolutionDir)\TestLibraries\bin" /Y
+xcopy "$(TargetDir)*.dll" "$(SolutionDir)\TestLibraries\bin" /Y
+xcopy "$(TargetDir)*.pdb" "$(SolutionDir)\TestLibraries\bin" /Y</PostBuildEvent>
+  </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
