--- a/Obfuscator.Common/Obfuscator.Common.csproj
+++ b/Obfuscator.Common/Obfuscator.Common.csproj
@@ -40,22 +40,24 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="COM\Assembly.cs" />
-    <Compile Include="COM\CustomAttribute.cs" />
-    <Compile Include="COM\Event.cs" />
-    <Compile Include="COM\Field.cs" />
-    <Compile Include="COM\Member.cs" />
-    <Compile Include="COM\Method.cs" />
-    <Compile Include="COM\Property.cs" />
-    <Compile Include="COM\Type.cs" />
+    <Compile Include="Configuration\COM\Assembly.cs" />
+    <Compile Include="Configuration\COM\CustomAttribute.cs" />
+    <Compile Include="Configuration\COM\Event.cs" />
+    <Compile Include="Configuration\COM\Extensions.cs" />
+    <Compile Include="Configuration\COM\Field.cs" />
+    <Compile Include="Configuration\COM\Member.cs" />
+    <Compile Include="Configuration\COM\Method.cs" />
+    <Compile Include="Configuration\COM\Property.cs" />
+    <Compile Include="Configuration\COM\Type.cs" />
     <Compile Include="Configuration\DefaultConfiguration.cs" />
-    <Compile Include="IFilter.cs" />
-    <Compile Include="Configuration\InputConfiguration.cs" />
+    <Compile Include="IMemberFilter.cs" />
     <Compile Include="ObfuscationContext.cs" />
     <Compile Include="ObfuscationOptions.cs" />
+    <Compile Include="Pipeline.cs" />
     <Compile Include="Steps\BaseStep.cs" />
     <Compile Include="Steps\IStep.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Steps\OutputStep.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Obfuscator.Utils\Obfuscator.Utils.csproj">
