--- a/Obfuscator.MetadataBuilder/Obfuscator.MetadataBuilder/Obfuscator.MetadataBuilder.csproj
+++ b/Obfuscator.MetadataBuilder/Obfuscator.MetadataBuilder/Obfuscator.MetadataBuilder.csproj
@@ -40,14 +40,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Extensions\GenericParameterExtensions.cs" />
-    <Compile Include="Extensions\IGenericParameterProviderExtensions.cs" />
-    <Compile Include="Extensions\ISecurityDeclarationProviderExtensions.cs" />
-    <Compile Include="Extensions\SecurityDeclarationExtensions.cs" />
+    <Compile Include="GenericParameterExtensions.cs" />
+    <Compile Include="IGenericParameterProviderExtensions.cs" />
+    <Compile Include="ISecurityDeclarationProviderExtensions.cs" />
+    <Compile Include="SecurityDeclarationExtensions.cs" />
     <Compile Include="MetadataBuilderHelper.cs" />
-    <Compile Include="Extensions\ICustomAttributeProviderExtensions.cs" />
-    <Compile Include="Extensions\ModuleDefinitionExtensions.cs" />
-    <Compile Include="Extensions\TypeDefinitionExtensions.cs" />
+    <Compile Include="ICustomAttributeProviderExtensions.cs" />
+    <Compile Include="ModuleDefinitionExtensions.cs" />
+    <Compile Include="TypeDefinitionExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
