--- a/Obfuscator/Obfuscator.csproj
+++ b/Obfuscator/Obfuscator.csproj
@@ -43,21 +43,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Pipeline.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Steps\OutputStep.cs" />
-    <Compile Include="Steps\RenameMapVisitor.cs" />
-    <Compile Include="Steps\SaveRenameMap.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Obfuscator.Common\Obfuscator.Common.csproj">
       <Project>{F2BF29A6-49B2-422A-9005-638E61F0AA97}</Project>
       <Name>Obfuscator.Common</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Obfuscator.Reflection\Obfuscator.Reflection\Obfuscator.Reflection.csproj">
-      <Project>{03C12128-D664-4C2C-B6C0-91AA4629BEB3}</Project>
-      <Name>Obfuscator.Reflection</Name>
+    <ProjectReference Include="..\Obfuscator.Merging\Obfuscator.Merging.csproj">
+      <Project>{C69DC498-F6CD-4629-9260-23DBA54EB69F}</Project>
+      <Name>Obfuscator.Merging</Name>
     </ProjectReference>
     <ProjectReference Include="..\Obfuscator.Renaming\Obfuscator.Renaming\Obfuscator.Renaming.csproj">
       <Project>{CB8EE040-0CCE-4863-84C8-FBF63170CAD8}</Project>
@@ -70,14 +66,6 @@
     <ProjectReference Include="..\ThirdParty\Cecil 1\Mono.Cecil.csproj">
       <Project>{D68133BD-1E63-496E-9EDE-4FBDBF77B486}</Project>
       <Name>Mono.Cecil</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\ThirdParty\Cecil 1\rocks\Mono.Cecil.Rocks.csproj">
-      <Project>{FBC6DD59-D09D-499C-B03C-99C1C78FF2AC}</Project>
-      <Name>Mono.Cecil.Rocks</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\ThirdParty\Cecil 1\symbols\pdb\Mono.Cecil.Pdb.csproj">
-      <Project>{63E6915C-7EA4-4D76-AB28-0D7191EEA626}</Project>
-      <Name>Mono.Cecil.Pdb</Name>
     </ProjectReference>
     <ProjectReference Include="..\ThirdParty\CommandLine\src\libcmdline\CommandLine.csproj">
       <Project>{5DEA2811-2FFA-4959-830B-CAD3ACACABEB}</Project>
